test/bad/functions/variadic01.px

func f(...a: [Int], ...b: [Int]): Void def
    return
